mnr layout issue solved

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1402,7 +1402,7 @@ input[type="datetime-local"]:focus {
 
 @media (max-width: 768px) {
     .mobile-menu-toggle {
-        display: block;
+        /* display: block; */
     }
     
     .main-content {
